# Django_TodoList

./: .env-prod  .gitignore  Dockerfile  README.md  create_superuser.py  docker-compose-dev.yaml  docker-compose.yaml  pyproject.toml  requirements.txt
apps/tasks/: hash_id.py  models.py  serializers.py  urls.py  views.py
apps/tasks/migrations/: 0001_initial.py
apps/users/: models.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py
jobs/: celery.py  tasks.py
mixins/: __init__.py  to_str.py
settings/: __init__.py  asgi.py  env_config.py  settings.py  urls.py  wsgi.py
telegram_bot/: Dockerfile  api.py  bot.py  handlers.py  notifications.py  requirements.txt  states.py
telegram_bot/dialogs/: add_task.py
