[project]
name = "todo-list"
version = "0.1.0"
description = ""
authors = [
    {name = "vellimir",email = "kkazancov@gmail.com"}
]
readme = "README.md"
requires-python = "3.12.7"
dependencies = [
    "django (>=5.2.3,<6.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "djangorestframework (>=3.16.0,<4.0.0)",
    "drf-yasg (>=1.21.10,<2.0.0)",
    "redis (>=6.2.0,<7.0.0)",
    "celery (>=5.5.3,<6.0.0)",
    "aiogram (>=3.20.0.post0,<4.0.0)",
    "aiogram-dialog (>=2.3.1,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
